# beuyyub

./: .gitignore  CMakeLists.txt  Dockerfile  GPATH  GRTAGS  GTAGS  Makefile  README.az.md  README.md  README.tr.md  cmake_install.cmake
.cache/clangd/index/: main.cpp.7D4EA774C70C9B6E.idx
.github/workflows/: cmake-single-platform.yml  docker-image.yml
cmake/: FindLIBOGG.cmake
lang/: az-AZ.lang  en-US.lang
src/: CMakeCache.txt  Makefile  array.cpp  beuyyub  changelog.txt  cmake_install.cmake  d1162ip.cpp  d1162ip.cpp.dead  d1162ip.h  d1162ip2.cpp  d1162ip2.hpp  main.cpp  mod  mod.cpp  test  test.cpp  test_2  test_2.cpp  test_bot.cpp  youtube.cpp  youtubeapi.cpp
